# AI_Agentic_In_Word

./: .gitignore  AgenticAIOnWord.sln  AgenticAIOnWord.vcxproj  AgenticAIOnWord.vcxproj.filters  CMakeLists.txt  LICENSE  README.md  build.ps1  build.zig  build.zig.zon  testapikey.sh
AgenticAIOnWordPS/: AgenticAIOnWordPS.vcxproj  AgenticAIOnWordPS.vcxproj.filters
idl/: AgenticAIOnWord.idl
include/: Connect.h  Resource.h  TaskPaneControl.h  challenges.hpp  debugger.hpp  dllmain.h  framework.h  security.hpp
include/client/: client.hpp
res/: AgenticAIOnWord.def  AgenticAIOnWord.rc  Connect.rgs  TaskPaneControl.rgs
scripts/: RegisterWordAddin.reg
src/: Connect.cpp  TaskPaneControl.cpp  dllmain.cpp
src/cpp/: AgenticAIOnWord.cpp  Connect.cpp  TaskPaneControl.cpp  security.cpp
src/cpp/client/: client.cpp  handlewrite.cpp
src/zig/: main.zig  mcphandler.zig  root.zig
src/zig/database/: sqlitehandler.zig
src/zig/server/: server.zig
